attempt at preventing content shift on toc toggle

--- a/styles/main/css/main.css
+++ b/styles/main/css/main.css
@@ -62,7 +62,6 @@ html
     -webkit-text-size-adjust:100%;
     font-size:100%;
     height:100%;
-    /* overflow-x:hidden; */
 }
 
 body
@@ -72,6 +71,7 @@ body
     font-family:"Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
     font-weight:normal;
     margin:0;
+    overflow-x:hidden;
     /* min-height:100%; */
     /* overflow-x:hidden; */
 }
@@ -80,13 +80,30 @@ body
 {
     background:#fcfcfc;
     height:100%;
-    margin-left:240px;
+    position:relative;
+    overflow-x:hidden;
+    /* left: 240px; */
+    margin-left:1em;
+    margin-right:auto;
     /* transform: translateX(240px); */
     /* margin:auto; */
-    min-width:25em;
-    max-width:800px;
-    min-height:100%;
-    padding:18px;
+    left:240px;
+    
+    padding:1em;
+    /* min-width:25em; */
+    /* min-width:40% */
+    /* width:800px; */
+    width: 90%;
+    min-width: 25em;
+    max-width: 45em;
+
+    /* max-width: 40em; */
+    /* margin: 1em; */
+    /* margin: 1em; */
+    /* max-width: 800px; */
+    /* min-width: 25em; */
+    /* min-height:100%; */
+
 }
 
 p
@@ -145,7 +162,7 @@ dd
 
 /* Table of Contents */
 
-#table-of-contents
+div#table-of-contents
 {
     background: #212424;
     position: fixed;
@@ -322,10 +339,11 @@ td
 
 table td,table th
 {
-    font-size:90%;
+    font-size:80%;
     margin:0;
     overflow:visible;
-    padding:8px 16px;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
     background-color:white;
     border-bottom:1px solid #e1e4e5; 
 }
@@ -346,8 +364,13 @@ table thead th
 #postamble.unshow
 {width:0;}
 #content.unshow
-{margin-left:40px;}
+{
+    left:0;
+}
 
+/* /\* {margin:auto;} *\/ */
+/* {margin-left:auto;} */
+ 
 button#toggle
 {
     z-index: 3;
@@ -392,5 +415,4 @@ p.validation
 {
     display:none;
 }
-
 
